# rockfall-monitor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.root  Procfile  README.md  SUBMISSION.md  app.py  constraints.txt  deploy.md  docker-compose.demo.gpu.yml  docker-compose.demo.yml  docker-compose.yml  download_sam.py  packages.txt  pyproject.toml  railway.toml  requirements-lock.txt  requirements.in  requirements.txt  run_desktop.bat  run_server.bat  start_demo.bat  test_crash_isolate.py  test_minimal.py
.streamlit/: config.toml
alembic/: env.py
data/: roi_config.json  site_state.json
deploy/: nginx.conf  rockfall-logrotate.conf  rockfall.service
desktop/: __init__.py  main.py
docker/: Dockerfile  Dockerfile.gpu  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  nginx.conf  nginx.prod.conf
docs/: API.md  DEPLOY.md  DEPLOYMENT.md  OPERATIONS.md  USER_GUIDE.md
rockfall/: __init__.py  alert_classifier.py  alert_store.py  audit.py  auth.py  cold_storage.py  config.py  db_engine.py  db_utils.py  detector.py  edge_enhance.py  edge_relay.py  fastsam_road.py  fastsam_segment.py  frame_buffer.py  fusion.py  hash_chain.py  health.py  logger.py  metrics.py  migration.py  model_poller.py  model_registry.py  motion_detect.py  notifier.py  performance.py  privacy.py  replay.py  retention_scheduler.py  road_detector.py  road_refine.py  road_segmentation.py  roi_confidence.py  sahi.py  sam_road_mask.py  sam_server_bak.py  scene_filter.py  secrets.py  sentry_init.py  site_config.py  (+5 more)
scripts/: backup_db.sh  evaluate_model.py  export_onnx.py  export_tensorrt.py  generate_all_demos.py  generate_demo.py  generate_yibin_demo.py  generate_yibin_full.py  rockfall.service  rollback.sh  seed_demo_data.py  setup_cron.sh  setup_server.sh  test_detection.py  validate_model.py  verify_migrations.py
server/: __init__.py  main.py  schemas.py  service.py
tests/: _empty_test.db  _test.db  _test_alerts.db  conftest.py  test_alert_store.py  test_cold_storage.py  test_detector.py  test_e2e_workflow.py  test_edge_enhance.py  test_hash_chain.py  test_integration_alert.py  test_integration_database.py  test_integration_detection.py  (+7 more)
(+94 files in other folders)
